# LED_backlight

./: CMakeLists.txt  README.md  led.py  main.c
get_colors/: get_rgb.py  pyvenv.cfg
